Switch to ViewModel Binding in Controller with PRG
