# CurrencyExchangeSolution/CurrencyExchangeService/DTO/ExchangeCardDTO.cs
@@ -7,13 +7,13 @@ namespace CurrencyExchange.Service.DTO
         public ExchangeCardDTO(IExchangeSummary summary)
         {
             From = new MoneyDTO(summary.From);
-            To = summary.To != null? new MoneyDTO(summary.To): null;
+            To = summary.To != null? new MoneyDTO(summary.To): new MoneyDTO("", null);
             RateApplied = summary.RateApplied;
             Notes = summary.Notes;
         }
 
         public MoneyDTO From { get; }
-        public MoneyDTO? To { get; }
+        public MoneyDTO To { get; }
         public decimal? RateApplied { get; }
         public string Notes { get; } = string.Empty;
     }
